Fix popover z-index issue

--- a/src/main/webapp/css/buckyless/sidebar.less
+++ b/src/main/webapp/css/buckyless/sidebar.less
@@ -74,9 +74,6 @@
     }
   }
 }
-.popover {
-  z-index:9999;
-}
 .section-divider {
   text-transform: uppercase;
   font-size:11px;
